--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <alt> sd</alt></alt></lion><img src="/ui/madi.png" class="img-medium"/>
+            <alt> sd<img src="/ui/madi.png" class="img-medium"/></alt>
         </div>
         <br>
         <div class="center text-big bold">
