--- a/ui/index.html
+++ b/ui/index.html
@@ -13,5 +13,8 @@
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
+        <script>
+            alert('Hi!! Welcome To Divyam's Page');
+        </script>
     </body>
 </html>
