[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="/ui/main.js">
         </script>
         <script>
-            alert('Hi!! Welcome To Divyam's Page');
+            alert('Hi!! Welcome To Divyam');
         </script>
     </body>
 </html>
