--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="/ui/main.js">
         </script>
         <script>
-            alert('Hi!! Welcome By Divyam');
+            alert('Hi!! Welcome To My Page');
         </script>
     </body>
 </html>
