[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,6 +16,6 @@
         <script>
             alert('Hi!! Welcome To My Page');
         </script>
-        <a href='https://www.youtube.com/watch?v=2w5kg8BfSD0'>Video Song</a>
+        <a href='https://www.youtube.com/watch?v=2w5kg8BfSD0'>$$$$$$$$$$$</a>
     </body>
 </html>
