--- a/ui/index.html
+++ b/ui/index.html
@@ -17,5 +17,6 @@
             alert('Hi!! Welcome To My Page');
         </script>
         <a href='https://www.youtube.com/watch?v=2w5kg8BfSD0'>$$$$$$$$$$$</a>
+        <body background='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAASwAAACoCAMAAABt9SM9AAAAA1BMVEX+AAAYIGMAAAAAR0lEQVR4nO3BAQEAAACCIP+vbkhAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAO8GxYgAAb0jQ/cAAAAASUVORK5CYII'>
     </body>
 </html>
