--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div id='main-text' class="center text-big bold">
-            Hi! I am divyam . this is my  webapp.
+            Hi! I am divyam . This is my  webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
