[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,6 +17,7 @@
             alert('Hi!! Welcome To My Page');
         </script>
         <a href='https://www.youtube.com/watch?v=2w5kg8BfSD0'>$$$$$$$$$$$</a>
+        <marquee>Hitesh Don</marquee>
         <body background='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAASwAAACoCAMAAABt9SM9AAAAA1BMVEX+AAAYIGMAAAAAR0lEQVR4nO3BAQEAAACCIP+vbkhAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAO8GxYgAAb0jQ/cAAAAASUVORK5CYII'>
     </body>
 </html>
